refactoring with SDK best practice

--- a/visier_sdk_walkthrough.ipynb
+++ b/visier_sdk_walkthrough.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,6 @@
    "source": [
     "import sys\n",
     "import warnings\n",
-    "import json\n",
     "from datetime import datetime\n",
     "import os\n",
     "\n",
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,9 +314,8 @@
     "    'options': {'limit': 10000, 'page': 0}\n",
     "}\n",
     "\n",
-    "# Convert dictionary to JSON string, then create DTO\n",
-    "json_string = json.dumps(query_dict)\n",
-    "query_dto = ListQueryExecutionDTO.from_json(json_string)\n",
+    "# Use from_dict() to create DTO directly from dictionary (simpler than from_json)\n",
+    "query_dto = ListQueryExecutionDTO.from_dict(query_dict)\n",
     "\n",
     "print('✅ Query built successfully!')\n",
     "print(f\"   Analytic Object: {query_dict['source']['analyticObject']}\")\n",
